--- a/play_with_data.ipynb
+++ b/play_with_data.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:278: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  'Matplotlib is building the font cache using fc-list. '\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -43,7 +65,8 @@
     "from kit import *\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import TruncatedSVD\n",
-    "from timeit import time"
+    "from timeit import time\n",
+    "pd.set_option('display.max_columns', 500)"
    ]
   },
   {
@@ -1135,7 +1158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
