--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,11 @@
     "import time\n",
     "from ast import literal_eval\n",
     "pd.set_option('display.max_columns', 500)\n",
-    "\n",
+    "# pd.set_option('display.height', 1000)\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.width', 1000)\n",
+    "# train_df = load_df('train_v2.csv',nrows=100)\n",
     "\n",
     "def load_df(file_name = 'train_v2.csv', nrows = None,skiprows=None):\n",
     "    \"\"\"Read csv and convert json columns.\"\"\"\n",
@@ -49,21 +53,49 @@
     "    column_as_df = json_normalize(df['customDimensions'])\n",
     "    column_as_df.columns = [f\"customDimensions_{subcolumn}\" for subcolumn in column_as_df.columns]\n",
     "    df = df.drop('customDimensions', axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
-    "    # Normalize hits\n",
+    "    \n",
+    "    # ===============================================\n",
+    "    print(\"---> working on hits\")\n",
     "    feat = 'hits'\n",
     "    df[feat]=df[feat].apply(literal_eval)\n",
     "    df[feat]=df[feat].str[0]\n",
-    "#     df[feat]=df[feat].apply(lambda x: {'index':np.NaN,'value':np.NaN} if pd.isnull(x) else x)\n",
-    "\n",
+    "    df[feat]=df[feat].apply(lambda x: {'index':np.NaN} if pd.isnull(x) else x)\n",
     "    column_as_df = json_normalize(df[feat])\n",
     "    column_as_df.columns = [f\"hits_{subcolumn}\" for subcolumn in column_as_df.columns]\n",
-    "    df = df.drop('hits', axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
+    "    df = df.drop(feat, axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
+    "    \n",
+    "    # ===============================================\n",
+    "    print(\"---> working on hits_promotion\")\n",
+    "    feat = 'hits_promotion'\n",
+    "#     df[feat]=df[feat].apply(literal_eval)\n",
+    "    df[feat]=df[feat].str[0]\n",
+    "    df[feat]=df[feat].apply(lambda x: {'index':np.NaN} if pd.isnull(x) else x)\n",
+    "    column_as_df = json_normalize(df[feat])\n",
+    "    column_as_df.columns = [f\"hits_promotion_{subcolumn}\" for subcolumn in column_as_df.columns]\n",
+    "    df = df.drop(feat, axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
+    "    \n",
+    "    \n",
+    "    # ===============================================\n",
+    "    print(\"---> working on hits_product\")\n",
+    "    feat = 'hits_product'\n",
+    "#     df[feat]=df[feat].apply(literal_eval)\n",
+    "    df[feat]=df[feat].str[0]\n",
+    "    df[feat]=df[feat].apply(lambda x: {'index':np.NaN} if pd.isnull(x) else x)\n",
+    "    column_as_df = json_normalize(df[feat])\n",
+    "    column_as_df.columns = [f\"hits_product_{subcolumn}\" for subcolumn in column_as_df.columns]\n",
+    "    df = df.drop(feat, axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
+    "    \n",
+    "    bracket_col = ['hits_customDimensions','hits_customMetrics','hits_customVariables','hits_experiment',\n",
+    "               'hits_publisher_infos','hits_product_customDimensions','hits_product_customMetrics']\n",
+    "    for col in bracket_col:\n",
+    "        df[col] = df[col].str[0]\n",
+    "    \n",
     "    return df\n",
     "\n",
     "    \n",
     "def pipeline():\n",
     "    timer = time.time()\n",
-    "    train = load_df('train_v2.csv')\n",
+    "    %time train = load_df('train_v2.csv')\n",
     "    # Drop constant columns in train and test\n",
     "    const_cols = [c for c in train.columns if train[c].nunique(dropna=False) < 2]\n",
     "    const_cols.append('customDimensions_index')  # Also not usefull\n",
@@ -75,7 +107,7 @@
     "    print(\"Train shape\", train.shape)\n",
     "    del train; gc.collect()\n",
     "    \n",
-    "    test = load_df('test_v2.csv')\n",
+    "    %time test = load_df('test_v2.csv')\n",
     "    # Drop constant columns in train\n",
     "    test.drop(const_cols, axis=1, inplace=True)\n",
     "    # Save as pickle file (could be hdf5 or feather too)\n",
@@ -83,44 +115,551 @@
     "    print(\"Test shape\", test.shape)\n",
     "    print(\"Pipeline completed in {}s\".format(time.time() - timer))\n",
     "    \n",
-    "# pd.set_option('display.height', 1000)\n",
-    "pd.set_option('display.max_rows', 500)\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.width', 1000)\n",
-    "train_df = load_df('train_v2.csv',nrows=100)"
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---> working on hits\n"
+     ]
+    }
+   ],
    "source": [
-    "# pipeline()\n",
+    "pipeline()\n",
     "# train_df = load_df('train_v2.csv',nrows=1000,skiprows=range(1,10))\n",
-    "train_df = load_df('train_v2.csv',nrows=1000,skiprows=[1])\n",
-    "# train_df.columns.values"
+    "# train_df = load_df('train_v2.csv',nrows=1000)\n",
+    "# train_df.head(30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 114)"
+       "0      NaN\n",
+       "1        A\n",
+       "2        A\n",
+       "3        A\n",
+       "4        A\n",
+       "5        A\n",
+       "6        A\n",
+       "7        A\n",
+       "8        A\n",
+       "9      NaN\n",
+       "10     NaN\n",
+       "11     NaN\n",
+       "12     NaN\n",
+       "13     NaN\n",
+       "14     NaN\n",
+       "15     NaN\n",
+       "16     NaN\n",
+       "17     NaN\n",
+       "18     NaN\n",
+       "19     NaN\n",
+       "20     NaN\n",
+       "21     NaN\n",
+       "22     NaN\n",
+       "23     NaN\n",
+       "24     NaN\n",
+       "25     NaN\n",
+       "26     NaN\n",
+       "27     NaN\n",
+       "28     NaN\n",
+       "29     NaN\n",
+       "30     NaN\n",
+       "31     NaN\n",
+       "32     NaN\n",
+       "33     NaN\n",
+       "34     NaN\n",
+       "35     NaN\n",
+       "36     NaN\n",
+       "37     NaN\n",
+       "38     NaN\n",
+       "39     NaN\n",
+       "40       A\n",
+       "41       A\n",
+       "42       A\n",
+       "43       A\n",
+       "44       A\n",
+       "45       A\n",
+       "46       A\n",
+       "47       A\n",
+       "48       A\n",
+       "49       A\n",
+       "50       A\n",
+       "51       A\n",
+       "52       A\n",
+       "53       A\n",
+       "54       A\n",
+       "55       A\n",
+       "56       A\n",
+       "57       A\n",
+       "58       A\n",
+       "59       A\n",
+       "60       A\n",
+       "61     NaN\n",
+       "62     NaN\n",
+       "63     NaN\n",
+       "64     NaN\n",
+       "65     NaN\n",
+       "66     NaN\n",
+       "67     NaN\n",
+       "68     NaN\n",
+       "69     NaN\n",
+       "70     NaN\n",
+       "71     NaN\n",
+       "72     NaN\n",
+       "73     NaN\n",
+       "74     NaN\n",
+       "75     NaN\n",
+       "76     NaN\n",
+       "77     NaN\n",
+       "78     NaN\n",
+       "79     NaN\n",
+       "80     NaN\n",
+       "81     NaN\n",
+       "82     NaN\n",
+       "83     NaN\n",
+       "84     NaN\n",
+       "85     NaN\n",
+       "86     NaN\n",
+       "87     NaN\n",
+       "88     NaN\n",
+       "89     NaN\n",
+       "90     NaN\n",
+       "91     NaN\n",
+       "92     NaN\n",
+       "93     NaN\n",
+       "94     NaN\n",
+       "95     NaN\n",
+       "96     NaN\n",
+       "97     NaN\n",
+       "98     NaN\n",
+       "99     NaN\n",
+       "100    NaN\n",
+       "101    NaN\n",
+       "102    NaN\n",
+       "103    NaN\n",
+       "104    NaN\n",
+       "105    NaN\n",
+       "106    NaN\n",
+       "107    NaN\n",
+       "108      A\n",
+       "109      A\n",
+       "110      A\n",
+       "111      A\n",
+       "112      A\n",
+       "113      A\n",
+       "114      A\n",
+       "115      A\n",
+       "116      A\n",
+       "117      A\n",
+       "118      A\n",
+       "119      A\n",
+       "120      A\n",
+       "121      A\n",
+       "122      A\n",
+       "123      A\n",
+       "124      A\n",
+       "125      A\n",
+       "126      A\n",
+       "127      A\n",
+       "128      A\n",
+       "129      A\n",
+       "130      A\n",
+       "131      A\n",
+       "132      A\n",
+       "133      A\n",
+       "134      A\n",
+       "135      A\n",
+       "136      A\n",
+       "137    NaN\n",
+       "138    NaN\n",
+       "139    NaN\n",
+       "140    NaN\n",
+       "141    NaN\n",
+       "142    NaN\n",
+       "143    NaN\n",
+       "144    NaN\n",
+       "145    NaN\n",
+       "146    NaN\n",
+       "147    NaN\n",
+       "148    NaN\n",
+       "149    NaN\n",
+       "150    NaN\n",
+       "151    NaN\n",
+       "152    NaN\n",
+       "153    NaN\n",
+       "154    NaN\n",
+       "155    NaN\n",
+       "156    NaN\n",
+       "157    NaN\n",
+       "158    NaN\n",
+       "159    NaN\n",
+       "160    NaN\n",
+       "161    NaN\n",
+       "162    NaN\n",
+       "163    NaN\n",
+       "164    NaN\n",
+       "165    NaN\n",
+       "166    NaN\n",
+       "167    NaN\n",
+       "168    NaN\n",
+       "169    NaN\n",
+       "170    NaN\n",
+       "171    NaN\n",
+       "172    NaN\n",
+       "173    NaN\n",
+       "174      A\n",
+       "175      A\n",
+       "176      A\n",
+       "177      A\n",
+       "178      A\n",
+       "179      A\n",
+       "180      A\n",
+       "181      A\n",
+       "182      A\n",
+       "183      A\n",
+       "184      A\n",
+       "185      A\n",
+       "186      A\n",
+       "187      A\n",
+       "188      A\n",
+       "189      A\n",
+       "190      A\n",
+       "191      A\n",
+       "192      A\n",
+       "193      A\n",
+       "194      A\n",
+       "195      A\n",
+       "196    NaN\n",
+       "197    NaN\n",
+       "198    NaN\n",
+       "199    NaN\n",
+       "200    NaN\n",
+       "201    NaN\n",
+       "202    NaN\n",
+       "203    NaN\n",
+       "204    NaN\n",
+       "205    NaN\n",
+       "206    NaN\n",
+       "207    NaN\n",
+       "208    NaN\n",
+       "209    NaN\n",
+       "210    NaN\n",
+       "211    NaN\n",
+       "212    NaN\n",
+       "213    NaN\n",
+       "214    NaN\n",
+       "215    NaN\n",
+       "216    NaN\n",
+       "217    NaN\n",
+       "218    NaN\n",
+       "219    NaN\n",
+       "220    NaN\n",
+       "221    NaN\n",
+       "222    NaN\n",
+       "223    NaN\n",
+       "224    NaN\n",
+       "225    NaN\n",
+       "226    NaN\n",
+       "227    NaN\n",
+       "228    NaN\n",
+       "229    NaN\n",
+       "230    NaN\n",
+       "231    NaN\n",
+       "232    NaN\n",
+       "233    NaN\n",
+       "234    NaN\n",
+       "235    NaN\n",
+       "236    NaN\n",
+       "237    NaN\n",
+       "238    NaN\n",
+       "239    NaN\n",
+       "240    NaN\n",
+       "241    NaN\n",
+       "242    NaN\n",
+       "243      A\n",
+       "244      A\n",
+       "245      A\n",
+       "246      A\n",
+       "247      A\n",
+       "248      A\n",
+       "249      A\n",
+       "      ... \n",
+       "750    NaN\n",
+       "751    NaN\n",
+       "752    NaN\n",
+       "753    NaN\n",
+       "754    NaN\n",
+       "755    NaN\n",
+       "756    NaN\n",
+       "757    NaN\n",
+       "758    NaN\n",
+       "759    NaN\n",
+       "760    NaN\n",
+       "761    NaN\n",
+       "762    NaN\n",
+       "763    NaN\n",
+       "764    NaN\n",
+       "765    NaN\n",
+       "766      A\n",
+       "767    NaN\n",
+       "768    NaN\n",
+       "769    NaN\n",
+       "770    NaN\n",
+       "771    NaN\n",
+       "772    NaN\n",
+       "773    NaN\n",
+       "774    NaN\n",
+       "775    NaN\n",
+       "776    NaN\n",
+       "777    NaN\n",
+       "778    NaN\n",
+       "779    NaN\n",
+       "780    NaN\n",
+       "781    NaN\n",
+       "782    NaN\n",
+       "783    NaN\n",
+       "784    NaN\n",
+       "785    NaN\n",
+       "786    NaN\n",
+       "787    NaN\n",
+       "788    NaN\n",
+       "789    NaN\n",
+       "790    NaN\n",
+       "791    NaN\n",
+       "792    NaN\n",
+       "793    NaN\n",
+       "794    NaN\n",
+       "795    NaN\n",
+       "796    NaN\n",
+       "797    NaN\n",
+       "798    NaN\n",
+       "799    NaN\n",
+       "800    NaN\n",
+       "801    NaN\n",
+       "802    NaN\n",
+       "803    NaN\n",
+       "804    NaN\n",
+       "805    NaN\n",
+       "806    NaN\n",
+       "807    NaN\n",
+       "808    NaN\n",
+       "809    NaN\n",
+       "810    NaN\n",
+       "811    NaN\n",
+       "812    NaN\n",
+       "813    NaN\n",
+       "814    NaN\n",
+       "815    NaN\n",
+       "816    NaN\n",
+       "817    NaN\n",
+       "818    NaN\n",
+       "819    NaN\n",
+       "820    NaN\n",
+       "821    NaN\n",
+       "822    NaN\n",
+       "823    NaN\n",
+       "824    NaN\n",
+       "825    NaN\n",
+       "826    NaN\n",
+       "827    NaN\n",
+       "828    NaN\n",
+       "829    NaN\n",
+       "830    NaN\n",
+       "831    NaN\n",
+       "832    NaN\n",
+       "833    NaN\n",
+       "834    NaN\n",
+       "835    NaN\n",
+       "836    NaN\n",
+       "837    NaN\n",
+       "838    NaN\n",
+       "839    NaN\n",
+       "840    NaN\n",
+       "841    NaN\n",
+       "842    NaN\n",
+       "843    NaN\n",
+       "844    NaN\n",
+       "845    NaN\n",
+       "846    NaN\n",
+       "847    NaN\n",
+       "848    NaN\n",
+       "849    NaN\n",
+       "850    NaN\n",
+       "851    NaN\n",
+       "852    NaN\n",
+       "853    NaN\n",
+       "854    NaN\n",
+       "855    NaN\n",
+       "856    NaN\n",
+       "857    NaN\n",
+       "858    NaN\n",
+       "859    NaN\n",
+       "860    NaN\n",
+       "861    NaN\n",
+       "862    NaN\n",
+       "863    NaN\n",
+       "864    NaN\n",
+       "865    NaN\n",
+       "866    NaN\n",
+       "867    NaN\n",
+       "868    NaN\n",
+       "869    NaN\n",
+       "870    NaN\n",
+       "871    NaN\n",
+       "872    NaN\n",
+       "873    NaN\n",
+       "874    NaN\n",
+       "875    NaN\n",
+       "876    NaN\n",
+       "877    NaN\n",
+       "878    NaN\n",
+       "879    NaN\n",
+       "880    NaN\n",
+       "881    NaN\n",
+       "882    NaN\n",
+       "883    NaN\n",
+       "884    NaN\n",
+       "885    NaN\n",
+       "886    NaN\n",
+       "887    NaN\n",
+       "888    NaN\n",
+       "889    NaN\n",
+       "890    NaN\n",
+       "891    NaN\n",
+       "892    NaN\n",
+       "893    NaN\n",
+       "894    NaN\n",
+       "895    NaN\n",
+       "896    NaN\n",
+       "897    NaN\n",
+       "898    NaN\n",
+       "899    NaN\n",
+       "900    NaN\n",
+       "901    NaN\n",
+       "902    NaN\n",
+       "903    NaN\n",
+       "904    NaN\n",
+       "905    NaN\n",
+       "906    NaN\n",
+       "907    NaN\n",
+       "908    NaN\n",
+       "909    NaN\n",
+       "910    NaN\n",
+       "911    NaN\n",
+       "912    NaN\n",
+       "913    NaN\n",
+       "914    NaN\n",
+       "915    NaN\n",
+       "916    NaN\n",
+       "917    NaN\n",
+       "918    NaN\n",
+       "919    NaN\n",
+       "920    NaN\n",
+       "921    NaN\n",
+       "922    NaN\n",
+       "923    NaN\n",
+       "924    NaN\n",
+       "925    NaN\n",
+       "926    NaN\n",
+       "927    NaN\n",
+       "928    NaN\n",
+       "929    NaN\n",
+       "930    NaN\n",
+       "931    NaN\n",
+       "932    NaN\n",
+       "933    NaN\n",
+       "934    NaN\n",
+       "935    NaN\n",
+       "936    NaN\n",
+       "937    NaN\n",
+       "938    NaN\n",
+       "939    NaN\n",
+       "940      A\n",
+       "941      A\n",
+       "942      A\n",
+       "943      A\n",
+       "944      A\n",
+       "945      A\n",
+       "946      A\n",
+       "947      A\n",
+       "948      A\n",
+       "949      A\n",
+       "950      A\n",
+       "951      A\n",
+       "952      A\n",
+       "953      A\n",
+       "954      A\n",
+       "955      A\n",
+       "956      A\n",
+       "957      A\n",
+       "958      A\n",
+       "959      A\n",
+       "960      A\n",
+       "961      A\n",
+       "962      A\n",
+       "963      A\n",
+       "964      A\n",
+       "965      A\n",
+       "966      A\n",
+       "967      A\n",
+       "968      A\n",
+       "969      A\n",
+       "970      A\n",
+       "971      A\n",
+       "972      A\n",
+       "973      A\n",
+       "974      A\n",
+       "975      A\n",
+       "976      A\n",
+       "977      A\n",
+       "978      A\n",
+       "979      A\n",
+       "980      A\n",
+       "981      A\n",
+       "982      A\n",
+       "983      A\n",
+       "984      A\n",
+       "985      A\n",
+       "986      A\n",
+       "987      A\n",
+       "988      A\n",
+       "989      A\n",
+       "990      A\n",
+       "991      A\n",
+       "992      A\n",
+       "993      A\n",
+       "994      A\n",
+       "995      A\n",
+       "996      A\n",
+       "997      A\n",
+       "998      A\n",
+       "999      A\n",
+       "Name: hits_promotion_promoName, Length: 1000, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df.shape\n",
-    "# train_df['hits'][0]"
+    "train_df['hits_promotion_promoName'].str[0]"
    ]
   },
   {
