--- a/parallel_extract-Copy1.ipynb
+++ b/parallel_extract-Copy1.ipynb
@@ -133,9 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
    },
    "outputs": [
     {
@@ -222,7 +238,268 @@
       "--> job 77 started\n",
       "--> job 78 started\n",
       "--> job 79 started\n",
-      "--> job 80 started\n"
+      "--> job 80 started\n",
+      "--> job 81 started\n",
+      "--> job 82 started\n",
+      "--> job 83 started\n",
+      "--> job 84 started\n",
+      "--> job 85 started\n",
+      "--> job 86 started\n",
+      "--> job 87 started\n",
+      "--> job 88 started\n",
+      "--> job 89 started\n",
+      "--> job 90 started\n",
+      "--> job 91 started\n",
+      "--> job 92 started\n",
+      "--> job 93 started\n",
+      "--> job 94 started\n",
+      "--> job 95 started\n",
+      "--> job 96 started\n",
+      "--> job 97 started\n",
+      "--> job 98 started\n",
+      "--> job 99 started\n",
+      "--> job 100 started\n",
+      "--> job 101 started\n",
+      "--> job 102 started\n",
+      "--> job 103 started\n",
+      "--> job 104 started\n",
+      "--> job 105 started\n",
+      "--> job 106 started\n",
+      "--> job 107 started\n",
+      "--> job 108 started\n",
+      "--> job 109 started\n",
+      "--> job 110 started\n",
+      "--> job 111 started\n",
+      "--> job 112 started\n",
+      "--> job 113 started\n",
+      "--> job 114 started\n",
+      "--> job 115 started\n",
+      "--> job 116 started\n",
+      "--> job 117 started\n",
+      "--> job 118 started\n",
+      "--> job 119 started\n",
+      "--> job 120 started\n",
+      "--> job 121 started\n",
+      "--> job 122 started\n",
+      "--> job 123 started\n",
+      "--> job 124 started\n",
+      "--> job 125 started\n",
+      "--> job 126 started\n",
+      "--> job 127 started\n",
+      "--> job 128 started\n",
+      "--> job 129 started\n",
+      "--> job 130 started\n",
+      "--> job 131 started\n",
+      "--> job 132 started\n",
+      "--> job 133 started\n",
+      "--> job 134 started\n",
+      "--> job 135 started\n",
+      "--> job 136 started\n",
+      "--> job 137 started\n",
+      "--> job 138 started\n",
+      "--> job 139 started\n",
+      "--> job 140 started\n",
+      "--> job 141 started\n",
+      "--> job 142 started\n",
+      "--> job 143 started\n",
+      "--> job 144 started\n",
+      "--> job 145 started\n",
+      "--> job 146 started\n",
+      "--> job 147 started\n",
+      "--> job 148 started\n",
+      "--> job 149 started\n",
+      "--> job 150 started\n",
+      "--> job 151 started\n",
+      "--> job 152 started\n",
+      "--> job 153 started\n",
+      "--> job 154 started\n",
+      "--> job 155 started\n",
+      "--> job 156 started\n",
+      "--> job 157 started\n",
+      "--> job 158 started\n",
+      "--> job 159 started\n",
+      "--> job 160 started\n",
+      "--> job 161 started\n",
+      "--> job 162 started\n",
+      "--> job 163 started\n",
+      "--> job 164 started\n",
+      "--> job 165 started\n",
+      "--> job 166 started\n",
+      "--> job 167 started\n",
+      "--> job 168 started\n",
+      "--> job 169 started\n",
+      "--> job 170 started\n",
+      "--> job 171 started\n",
+      "--> job 172 started\n",
+      "--> job 173 started\n",
+      "--> job 174 started\n",
+      "--> job 175 started\n",
+      "--> job 176 started\n",
+      "--> job 177 started\n",
+      "--> job 178 started\n",
+      "--> job 179 started\n",
+      "--> job 180 started\n",
+      "--> job 181 started\n",
+      "--> job 182 started\n",
+      "--> job 183 started\n",
+      "--> job 184 started\n",
+      "--> job 185 started\n",
+      "--> job 186 started\n",
+      "--> job 187 started\n",
+      "--> job 188 started\n",
+      "--> job 189 started\n",
+      "--> job 190 started\n",
+      "--> job 191 started\n",
+      "--> job 192 started\n",
+      "--> job 193 started\n",
+      "--> job 194 started\n",
+      "--> job 195 started\n",
+      "--> job 196 started\n",
+      "--> job 197 started\n",
+      "--> job 198 started\n",
+      "--> job 199 started\n",
+      "--> job 200 started\n",
+      "--> job 201 started\n",
+      "--> job 202 started\n",
+      "--> job 203 started\n",
+      "--> job 204 started\n",
+      "--> job 205 started\n",
+      "--> job 206 started\n",
+      "--> job 207 started\n",
+      "--> job 208 started\n",
+      "--> job 209 started\n",
+      "--> job 210 started\n",
+      "--> job 211 started\n",
+      "--> job 212 started\n",
+      "--> job 213 started\n",
+      "--> job 214 started\n",
+      "--> job 215 started\n",
+      "--> job 216 started\n",
+      "--> job 217 started\n",
+      "--> job 218 started\n",
+      "--> job 219 started\n",
+      "--> job 220 started\n",
+      "--> job 221 started\n",
+      "--> job 222 started\n",
+      "--> job 223 started\n",
+      "--> job 224 started\n",
+      "--> job 225 started\n",
+      "--> job 226 started\n",
+      "--> job 227 started\n",
+      "--> job 228 started\n",
+      "--> job 229 started\n",
+      "--> job 230 started\n",
+      "--> job 231 started\n",
+      "--> job 232 started\n",
+      "--> job 233 started\n",
+      "--> job 234 started\n",
+      "--> job 235 started\n",
+      "--> job 236 started\n",
+      "--> job 237 started\n",
+      "--> job 238 started\n",
+      "--> job 239 started\n",
+      "--> job 240 started\n",
+      "--> job 241 started\n",
+      "--> job 242 started\n",
+      "--> job 243 started\n",
+      "--> job 244 started\n",
+      "--> job 245 started\n",
+      "--> job 246 started\n",
+      "--> job 247 started\n",
+      "--> job 248 started\n",
+      "--> job 249 started\n",
+      "--> job 250 started\n",
+      "--> job 251 started\n",
+      "--> job 252 started\n",
+      "--> job 253 started\n",
+      "--> job 254 started\n",
+      "--> job 255 started\n",
+      "--> job 256 started\n",
+      "--> job 257 started\n",
+      "--> job 258 started\n",
+      "--> job 259 started\n",
+      "--> job 260 started\n",
+      "--> job 261 started\n",
+      "--> job 262 started\n",
+      "--> job 263 started\n",
+      "--> job 264 started\n",
+      "--> job 265 started\n",
+      "--> job 266 started\n",
+      "--> job 267 started\n",
+      "--> job 268 started\n",
+      "--> job 269 started\n",
+      "--> job 270 started\n",
+      "--> job 271 started\n",
+      "--> job 272 started\n",
+      "--> job 273 started\n",
+      "--> job 274 started\n",
+      "--> job 275 started\n",
+      "--> job 276 started\n",
+      "--> job 277 started\n",
+      "--> job 278 started\n",
+      "--> job 279 started\n",
+      "--> job 280 started\n",
+      "--> job 281 started\n",
+      "--> job 282 started\n",
+      "--> job 283 started\n",
+      "--> job 284 started\n",
+      "--> job 285 started\n",
+      "--> job 286 started\n",
+      "--> job 287 started\n",
+      "--> job 288 started\n",
+      "--> job 289 started\n",
+      "--> job 290 started\n",
+      "--> job 291 started\n",
+      "--> job 292 started\n",
+      "--> job 293 started\n",
+      "--> job 294 started\n",
+      "--> job 295 started\n",
+      "--> job 296 started\n",
+      "--> job 297 started\n",
+      "--> job 298 started\n",
+      "--> job 299 started\n",
+      "--> job 300 started\n",
+      "--> job 301 started\n",
+      "--> job 302 started\n",
+      "--> job 303 started\n",
+      "--> job 304 started\n",
+      "--> job 305 started\n",
+      "--> job 306 started\n",
+      "--> job 307 started\n",
+      "--> job 308 started\n",
+      "--> job 309 started\n",
+      "--> job 310 started\n",
+      "--> job 311 started\n",
+      "--> job 312 started\n",
+      "--> job 313 started\n",
+      "--> job 314 started\n",
+      "--> job 315 started\n",
+      "--> job 316 started\n",
+      "--> job 317 started\n",
+      "--> job 318 started\n",
+      "--> job 319 started\n",
+      "--> job 320 started\n",
+      "--> job 321 started\n",
+      "--> job 322 started\n",
+      "--> job 323 started\n",
+      "--> job 324 started\n",
+      "--> job 325 started\n",
+      "--> job 326 started\n",
+      "--> job 327 started\n",
+      "--> job 328 started\n",
+      "--> job 329 started\n",
+      "--> job 330 started\n",
+      "--> job 331 started\n",
+      "--> job 332 started\n",
+      "--> job 333 started\n",
+      "--> job 334 started\n",
+      "--> job 335 started\n",
+      "--> job 336 started\n",
+      "--> job 337 started\n",
+      "--> job 338 started\n",
+      "--> job 339 started\n",
+      "--> job 340 started\n",
+      "--> job 341 started\n"
      ]
     },
     {
@@ -242,30 +519,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----> Total time spent is 0:14:04.575114\n"
+      "----> Total time spent is 0:13:01.441712\n"
      ]
     }
    ],
    "source": [
-    "test_df = process_input_csv(\"./data/test_v2.csv\",chunksize=5000,flag=\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.to_csv('./data/my_test.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = process_input_csv(\"./data/train_v2.csv\",chunksize=5000,flag=\"train\")\n"
+    "train_df = process_input_csv(\"./data/train_v2.csv\",chunksize=5000,flag=\"train\")\n",
+    "train_df.to_csv('./data/my_train.csv',index=False)"
    ]
   },
   {
@@ -275,29 +535,21 @@
     "scrolled": false
    },
    "outputs": [],
-   "source": [
-    "train_df.to_csv('./data/my_train.csv',index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "test_df.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "all_files_to_remove = glob.glob(\"./data\"+\"/out.*csv\")\n",
-    "for ff in all_files_to_remove:\n",
-    "    os.remove(ff)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
